Addition of list_keys and list_items methods; fixes to update method.

--- a/examples/Sandbox.ipynb
+++ b/examples/Sandbox.ipynb
@@ -18,33 +18,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "1a6e6869",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Arraytainer([array([1, 4, 6]), [array([1, 4, 2]), array([1, 4, 4])]])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "\n",
-    "A = Arraytainer([jnp.ones((2,3)),[jnp.ones((2,1)),jnp.ones((2,2))]])\n",
-    "B = Arraytainer([[jnp.ones((2,2))],[jnp.ones((3,2)), jnp.ones((3,2))]])\n",
-    "np.kron(A,B).shape"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
-   "id": "ea135ae8",
+   "id": "1a6e6869",
    "metadata": {},
    "outputs": [
     {
@@ -53,8 +28,53 @@
      "text": [
       "WARNING:absl:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Arraytainer([array([1, 4, 6]), [array([2, 6, 2]), array([2, 6, 4])]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "A = Arraytainer([jnp.ones((2,3)),[jnp.ones((2,1)),jnp.ones((2,2))]])\n",
+    "B = Arraytainer([[jnp.ones((2,2))],[jnp.ones((3,2)), jnp.ones((3,2))]])\n",
+    "np.kron(A,B).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "135edd60",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Arraytainer({0: {'mean': array(2), 'log_chol_diag': array([[0.]], dtype=float32)}, 1: {'mean': array([[0.]], dtype=float32), 'log_chol_diag': array([[0.]], dtype=float32)}, 'log_unnorm_coeff': array([[0., 0.]], dtype=float32)})"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "phi = Arraytainer({0: {'mean': jnp.array([[0.]]), 'log_chol_diag': jnp.array([[0.]])}, 1: {'mean': jnp.array([[0.]]), 'log_chol_diag': jnp.array([[0.]])}, 'log_unnorm_coeff': jnp.array([[0., 0.]])})\n",
+    "phi.update(2, (0, 'mean'))\n",
+    "phi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ea135ae8",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "phi = Arraytainer({0: {'mean': jnp.array([[0.]]), 'log_chol_diag': jnp.array([[0.]])}, 1: {'mean': jnp.array([[0.]]), 'log_chol_diag': jnp.array([[0.]])}, 'log_unnorm_coeff': jnp.array([[0., 0.]])})"
    ]
