Split behaviour of update method into a new update method and an assign method.

--- a/examples/Sandbox.ipynb
+++ b/examples/Sandbox.ipynb
@@ -18,6 +18,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "7618cb2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Arraytainer([array([[1., 1., 1.],\n",
+       "       [1., 1., 1.]], dtype=float32), [array([[1.],\n",
+       "       [1.]], dtype=float32), array([[1., 1.],\n",
+       "       [1., 1.]], dtype=float32), array(1)]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = Arraytainer([jnp.ones((2,3)),[jnp.ones((2,1)),jnp.ones((2,2))]])\n",
+    "A.update(1, 1)\n",
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "1a6e6869",
    "metadata": {},
