Added tolist method so that contents of arraytainer can be easily saved to JSON format.

--- a/examples/Sandbox.ipynb
+++ b/examples/Sandbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "b821c3fa",
    "metadata": {},
    "outputs": [],
@@ -13,15 +13,23 @@
     "import jax\n",
     "import jax.numpy as jnp\n",
     "import functools\n",
-    "from jax.numpy import DeviceArray"
+    "from jax.numpy import DeviceArray\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "7618cb2b",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -31,7 +39,7 @@
        "       [1., 1.]], dtype=float32), array(1)]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,6 +48,28 @@
     "A = Arraytainer([jnp.ones((2,3)),[jnp.ones((2,1)),jnp.ones((2,2))]])\n",
     "A.update(1, 1)\n",
     "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d72461c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[[1.0, 1.0, 1.0], [1.0, 1.0, 1.0]],\n",
+       " [[[1.0], [1.0]], [[1.0, 1.0], [1.0, 1.0]], 1]]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.tolist()"
    ]
   },
   {
@@ -74,25 +104,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "135edd60",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Arraytainer({0: {'mean': array(2), 'log_chol_diag': array([[0.]], dtype=float32)}, 1: {'mean': array([[0.]], dtype=float32), 'log_chol_diag': array([[0.]], dtype=float32)}, 'log_unnorm_coeff': array([[0., 0.]], dtype=float32)})"
+       "Jaxtainer({0: {'mean': DeviceArray([[0.]], dtype=float32), 'log_chol_diag': DeviceArray([[0.]], dtype=float32)}, 1: {'mean': DeviceArray([[0.]], dtype=float32), 'log_chol_diag': DeviceArray([[0.]], dtype=float32)}, 'log_unnorm_coeff': DeviceArray([[0., 0.]], dtype=float32)})"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "phi = Arraytainer({0: {'mean': jnp.array([[0.]]), 'log_chol_diag': jnp.array([[0.]])}, 1: {'mean': jnp.array([[0.]]), 'log_chol_diag': jnp.array([[0.]])}, 'log_unnorm_coeff': jnp.array([[0., 0.]])})\n",
-    "phi.update(2, (0, 'mean'))\n",
+    "phi = Jaxtainer({0: {'mean': jnp.array([[0.]]), 'log_chol_diag': jnp.array([[0.]])}, 1: {'mean': jnp.array([[0.]]), 'log_chol_diag': jnp.array([[0.]])}, 'log_unnorm_coeff': jnp.array([[0., 0.]])})\n",
     "phi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ea487d8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'_io.TextIOWrapper' object has no attribute 'dumps'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_10096/2966916001.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'a.json'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdumps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mphi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: '_io.TextIOWrapper' object has no attribute 'dumps'"
+     ]
+    }
+   ],
+   "source": [
+    "with open('a.json', 'w') as f:\n",
+    "    json.dumps(phi.tolist())"
    ]
   },
   {
@@ -102,7 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "phi = Arraytainer({0: {'mean': jnp.array([[0.]]), 'log_chol_diag': jnp.array([[0.]])}, 1: {'mean': jnp.array([[0.]]), 'log_chol_diag': jnp.array([[0.]])}, 'log_unnorm_coeff': jnp.array([[0., 0.]])})"
+    "phi = Arraytainer({0: {'mean': jnp.array([[0.]]), 'log_chol_diag': jnp.array([[0.]])}, 1: {'mean': jnp.array([[0.]]), 'log_chol_diag': jnp.array([[0.]])}, 'log_unnorm_coeff': jnp.array([[0., 0.]])})a"
    ]
   },
   {
