--- a/examples/Sandbox.ipynb
+++ b/examples/Sandbox.ipynb
@@ -24,6 +24,118 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "89070b2e-8c74-430a-9f22-1b166ae800e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Arraytainer({})"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = Arraytainer({'a': np.array([[1,2],[3,4]]), 'b': np.array([[5,6],[7,8]])})\n",
+    "B = Arraytainer({'a': np.array([True, False])})\n",
+    "A[B]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f4f630d3-aef4-41ca-b797-11ae50455f57",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Arraytainer([{'a': array(1), 1: array(2)}, {0: array(3), 1: array(4), 'a': {0: array(5)}}, [array(6), array(7), {'a': array(8), 'b': array(9)}]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = Arraytainer([{'a':1, 1:2}, {0:3, 1:4, 'a':{0:5}}, [6, 7, {'a':8, 'b':9}]])\n",
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "74ae5f31-0d29-4b5c-b74c-c43f3d7ff150",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B = Jaxtainer([{'a':1, 1:2}, {0:3, 1:4, 'a':{0:5}}, [6, 7, {'a':8, 'b':9}]])\n",
+    "type(B[0]['a'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "fb198c1b-7511-46c5-981a-bcad5c0eaf08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = Arraytainer({'a': -1*np.ones((2,2)), 'b': np.ones((2,2))})\n",
+    "B = Arraytainer({'a': np.array([[True, False],[True, False]]), 'b': np.array([True, False])})\n",
+    "C = Arraytainer({'a': 2, 'b': np.array([3,4])})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d8f305a3-77fe-47b3-8dcc-9b6d0a9118b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'.'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [7]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m A[B] \u001b[38;5;241m=\u001b[39m C\n\u001b[1;32m      2\u001b[0m A\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/arraytainers/arraytainer.py:106\u001b[0m, in \u001b[0;36mArraytainer.__setitem__\u001b[0;34m(self, key, new_val)\u001b[0m\n\u001b[1;32m    104\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_set_with_array(key, new_val)\n\u001b[1;32m    105\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, Arraytainer):\n\u001b[0;32m--> 106\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_set_with_arraytainer\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnew_val\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    107\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    108\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_set_with_regular_key(key, new_val)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/arraytainers/arraytainer.py:333\u001b[0m, in \u001b[0;36mArraytainer._set_with_arraytainer\u001b[0;34m(self, arraytainer, new_val)\u001b[0m\n\u001b[1;32m    331\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_set_array_values(key, mask, new_val)\n\u001b[1;32m    332\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mis_array(self_val) \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(new_val, Arraytainer):\n\u001b[0;32m--> 333\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mKeyError\u001b[0m: '.'"
+     ]
+    }
+   ],
+   "source": [
+    "A[B] = C\n",
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "434a73f1-ecac-4b09-b936-2cf8691a7c01",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "f3d3b9a2-3f79-41a9-b154-a7d683c851d9",
    "metadata": {},
