--- a/examples/Sandbox.ipynb
+++ b/examples/Sandbox.ipynb
@@ -24,14 +24,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "89070b2e-8c74-430a-9f22-1b166ae800e0",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arraytainer({'a': {'c': [(1, 2, 3)]}, 'b': (3, 2)})\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "zero-dimensional arrays cannot be concatenated",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m A \u001b[38;5;241m=\u001b[39m Arraytainer({\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m: {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc\u001b[39m\u001b[38;5;124m'\u001b[39m: [np\u001b[38;5;241m.\u001b[39marray([[\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m],[\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m4\u001b[39m],[\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m6\u001b[39m]])]}, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m'\u001b[39m: [{\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m:np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m6\u001b[39m,\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m1\u001b[39m])}]})\n\u001b[1;32m      2\u001b[0m shape \u001b[38;5;241m=\u001b[39m Arraytainer({\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m: {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc\u001b[39m\u001b[38;5;124m'\u001b[39m: [(\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m)]}, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m'\u001b[39m: (\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m2\u001b[39m)}, array_conversions\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m----> 3\u001b[0m \u001b[43mA\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreshape\u001b[49m\u001b[43m(\u001b[49m\u001b[43mshape\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/arraytainers/arraytainer.py:265\u001b[0m, in \u001b[0;36mArraytainer.reshape\u001b[0;34m(self, order, *new_shapes)\u001b[0m\n\u001b[1;32m    263\u001b[0m is_arraytainer \u001b[38;5;241m=\u001b[39m [\u001b[38;5;28misinstance\u001b[39m(shape, Arraytainer) \u001b[38;5;28;01mfor\u001b[39;00m shape \u001b[38;5;129;01min\u001b[39;00m new_shapes]\n\u001b[1;32m    264\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28many\u001b[39m(is_arraytainer) \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mall\u001b[39m(is_arraytainer):\n\u001b[0;32m--> 265\u001b[0m     new_shapes \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;18;43m__class__\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mby_concatenation\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnew_shapes\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    266\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;28mself\u001b[39m, new_shapes, order\u001b[38;5;241m=\u001b[39morder)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/arraytainers/arraytainer.py:80\u001b[0m, in \u001b[0;36mArraytainer.by_concatenation\u001b[0;34m(cls, values, dtype)\u001b[0m\n\u001b[1;32m     78\u001b[0m             val_i \u001b[38;5;241m=\u001b[39m val_i[\u001b[38;5;28;01mNone\u001b[39;00m]\n\u001b[1;32m     79\u001b[0m     to_concat\u001b[38;5;241m.\u001b[39mappend(val_i)\n\u001b[0;32m---> 80\u001b[0m concatenated \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconcatenate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mto_concat\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     81\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m concatenated\n",
+      "File \u001b[0;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36mconcatenate\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/arraytainers/arraytainer.py:111\u001b[0m, in \u001b[0;36mArraytainer.__array_function__\u001b[0;34m(self, func, types, args, kwargs)\u001b[0m\n\u001b[1;32m    110\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__array_function__\u001b[39m(\u001b[38;5;28mself\u001b[39m, func, types, args, kwargs):\n\u001b[0;32m--> 111\u001b[0m     fun_return \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_manage_func_call\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfunc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtypes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    112\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m fun_return\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/arraytainers/arraytainer.py:376\u001b[0m, in \u001b[0;36mArraytainer._manage_func_call\u001b[0;34m(self, func, types, *args, **kwargs)\u001b[0m\n\u001b[1;32m    374\u001b[0m     args_i \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_prepare_func_args(args, key)\n\u001b[1;32m    375\u001b[0m     kwargs_i \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_prepare_func_args(kwargs, key)\n\u001b[0;32m--> 376\u001b[0m     func_return[key] \u001b[38;5;241m=\u001b[39m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs_i\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs_i\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    377\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__class__\u001b[39m(func_return)\n",
+      "File \u001b[0;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36mconcatenate\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: zero-dimensional arrays cannot be concatenated"
+     ]
+    }
+   ],
+   "source": [
+    "A = Arraytainer({'a': {'c': [np.array([[1,2],[3,4],[5,6]])]}, 'b': [{'a':np.array([6,5,4,3,2,1])}]})\n",
+    "shape = Arraytainer({'a': {'c': [(1,2,3)]}, 'b': (3,2)}, array_conversions=False)\n",
+    "A.reshape(shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f4b6bfce-ed64-46e9-9ec6-5618bcf769af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Args = (array([[1, 2],\n",
+      "       [3, 4],\n",
+      "       [5, 6]]), array([1, 2, 3]))\n",
+      "Args = (array([6, 5, 4, 3, 2, 1]), array([3, 2]))\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "Arraytainer({})"
+       "Arraytainer({'a': array([[[1, 2, 3],\n",
+       "        [4, 5, 6]]]), 'b': array([[6, 5],\n",
+       "       [4, 3],\n",
+       "       [2, 1]])})"
       ]
      },
      "execution_count": 6,
@@ -40,14 +90,14 @@
     }
    ],
    "source": [
-    "A = Arraytainer({'a': np.array([[1,2],[3,4]]), 'b': np.array([[5,6],[7,8]])})\n",
-    "B = Arraytainer({'a': np.array([True, False])})\n",
-    "A[B]"
+    "A = Arraytainer({'a': np.array([[1,2],[3,4],[5,6]]), 'b': np.array([6,5,4,3,2,1])})\n",
+    "shape = (Arraytainer({'a': (1,2,3), 'b': (3,2)}),)\n",
+    "A.reshape(shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "f4f630d3-aef4-41ca-b797-11ae50455f57",
    "metadata": {},
    "outputs": [
@@ -57,7 +107,7 @@
        "Arraytainer([{'a': array(1), 1: array(2)}, {0: array(3), 1: array(4), 'a': {0: array(5)}}, [array(6), array(7), {'a': array(8), 'b': array(9)}]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
