Changed explicit type checks for ABC (i.e. duck-type) checks.

--- a/examples/Sandbox.ipynb
+++ b/examples/Sandbox.ipynb
@@ -53,56 +53,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "a0f91814-d1e8-442b-8b5d-723513359094",
+   "execution_count": 7,
+   "id": "5f455c23-489e-44c5-b70f-9d363f11fe19",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'a': 'C', 'b': [{'a': 'F'}]}\n",
-      "False\n",
-      "b\n",
-      "[{'a': 'F'}]\n",
-      "False\n",
-      "b\n",
-      "{'a': 'F'}\n",
-      "False\n",
-      "{'a': 'F'}\n",
-      "False\n",
-      "{'a': 'F'}\n",
-      "True\n",
-      "c\n",
-      "[Arraytainer({'a': array('F', dtype='<U1')})]\n",
-      "False\n",
-      "a\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([1])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "val = Arraytainer({'a': np.array(1)})\n",
+    "val.flatten()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a0f91814-d1e8-442b-8b5d-723513359094",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "val = Arraytainer({'a': 'C', 'b': [{'a': 'F'}]}, array_conversions=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "36f98fa6-204b-494b-b546-e81eeb993870",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Arraytainer({'a': 'C', 'b': [{'a': array('F', dtype='<U1')}]})"
+       "array(['C', 'F'], dtype='<U1')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "val"
+    "val.flatten()"
    ]
   },
   {
